Update environment configuration and documentation for AWS profile changes
- Changed default AWS profile in `.env.example` and `variables.tf` from `dan-admin` to `default`.
- Updated `.gitignore` to include Terraform plan files.
- Revised `README.md` and `docs/GUIDE.md` to reflect the use of a customizable AWS profile instead of a hardcoded one.

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ REDIS_URL=redis://localhost:6379
 
 # AWS Configuration (for deployed environment)
 AWS_REGION=us-east-1
-AWS_PROFILE=dan-admin
+AWS_PROFILE=default
 
 # SQS Queue URL (set after terraform apply)
 SQS_QUEUE_URL=
