Add analytics job handling and environment configuration updates
- Introduced `handle_analytics_job` function to process analytics tasks, including file reading, context building, and output writing.
- Updated `process_job` function to support the new analytics job type.
- Modified `docker-compose.yml` to include `ANTHROPIC_API_KEY` and added a volume for workspace path configuration.

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -34,6 +34,9 @@ services:
       dockerfile: Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
+    volumes:
+      - ${WORKSPACE_PATH:-~/repos}:/workspace
     depends_on:
       redis:
         condition: service_healthy
