Refactor Docker setup for worker service
- Updated `docker-compose.yml` to point to the correct Dockerfile location for the worker service.
- Enhanced `worker/Dockerfile` by adding system dependencies (git, tmux, curl) and improving layer caching by copying requirements before the application code.
- Included the `agent_farm` module for multi-agent orchestration in the worker image.

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -30,8 +30,8 @@ services:
 
   worker:
     build:
-      context: ../worker
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: worker/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
